--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "electron-quick-start",
+  "name": "Readit",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Master Electron Course Project",
   "main": "main.js",
   "scripts": {
     "start": "./node_modules/.bin/electron ."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron/electron-quick-start.git"
+    "url": "git+https://github.com/randomprimate/bookmarks-electron.git"
   },
   "keywords": [
     "Electron",
-    "quick",
-    "start",
-    "tutorial"
+    "url",
+    "links"
   ],
-  "author": "GitHub",
+  "author": "Jose Torres",
   "license": "CC0-1.0",
   "bugs": {
-    "url": "https://github.com/electron/electron-quick-start/issues"
+    "url": "https://github.com/randomprimate/bookmarks-electron/issues"
   },
-  "homepage": "https://github.com/electron/electron-quick-start#readme",
+  "homepage": "https://github.com/randomprimate/bookmarks-electron#readme",
   "devDependencies": {
     "electron": "*",
     "devtron": "*",
     "electron-reload": "*"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "query-string": "^6.0.0"
   }
 }
